--- a/assets/stylesheets/oosd.css
+++ b/assets/stylesheets/oosd.css
@@ -1,6 +1,10 @@
-body {
-  font-family: arial, sans-serif;
+body {'
   font-size: 16px;
+}
+
+@font-face {
+  font-family: 'Visitor1';
+  src: url('../fonts/visitor1.ttf');
 }
 
 canvas, background-canvas, foreground-canvas {
