--- a/assets/stylesheets/oosd.css
+++ b/assets/stylesheets/oosd.css
@@ -1,5 +1,7 @@
-body {'
+body {
   font-size: 16px;
+  font-family: 'Visitor1';
+  src: url('../fonts/visitor1.ttf');
 }
 
 @font-face {
@@ -19,4 +21,8 @@ canvas, background-canvas, foreground-canvas {
 .vsc-initialized {
   margin: 0 auto;
   width: 600px;
+}
+
+h1 {
+  font-size: 40px;
 }
