--- a/assets/stylesheets/oosd.css
+++ b/assets/stylesheets/oosd.css
@@ -4,25 +4,57 @@ body {
   src: url('../fonts/visitor1.ttf');
 }
 
+img {
+  position: absolute;
+}
+
 @font-face {
   font-family: 'Visitor1';
   src: url('../fonts/visitor1.ttf');
 }
 
-canvas, background-canvas, foreground-canvas {
-  border: 1px solid black;
+#header {
+  display: flex;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 60px;
+}
+
+#game-area {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+}
+
+.game-frame {
   z-index: 1;
-  margin-top: 100px;
+  width: 752px;
+  height: 468px;
+  margin: 65px auto;
+}
+
+canvas {
+  position: absolute;
+  margin: 110px 0px 0px 12px;
+  width: 600px;
+  border: 1px solid black;
+  z-index: 3;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-.vsc-initialized {
-  margin: 0 auto;
-  width: 600px;
+#sound-btn {
+  z-index: 10;
+  color: white;
+  font-size: 20px;
+  margin-top: -352px;
+  margin-left: 530px;
 }
 
-h1 {
-  font-size: 40px;
+.music-note {
+  width: 30px;
 }
