--- a/assets/stylesheets/oosd.css
+++ b/assets/stylesheets/oosd.css
@@ -16,10 +16,18 @@ img {
 #header {
   display: flex;
   justify-content: center;
+  background: url('../images/header_background.png');
+  padding: 10px;
 }
 
 h1 {
   font-size: 60px;
+  color: white;
+}
+
+.browser-background {
+  background-size: cover;
+  width: 100%;
 }
 
 #game-area {
@@ -31,15 +39,14 @@ h1 {
 
 .game-frame {
   z-index: 1;
-  width: 752px;
+  width: 746px;
   height: 468px;
   margin: 65px auto;
 }
 
 canvas {
   position: absolute;
-  margin: 110px 0px 0px 12px;
-  width: 600px;
+  margin: 107px 0px 0px 12px;  width: 600px;
   border: 1px solid black;
   z-index: 3;
   -webkit-box-sizing: border-box;
@@ -49,12 +56,40 @@ canvas {
 
 #sound-btn {
   z-index: 10;
-  color: white;
-  font-size: 20px;
-  margin-top: -352px;
-  margin-left: 530px;
+  margin-top: -370px;
+  margin-left: 560px;
 }
 
 .music-note {
   width: 30px;
+}
+
+.thought-bubbles {
+  width: 285px;
+  margin: -98px 0 0 228px;
+}
+
+.oliver {
+  width: 300px;
+  margin-left: 10px;
+  margin-top: 120px;
+}
+
+.snooze {
+  width: 72px;
+  margin-left: 275px;
+  margin-top: 172px;
+}
+
+#icon-container {
+  width: 15%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+#icon-container img:hover {
+  opacity: 0.6;
 }
