--- a/assets/stylesheets/oosd.css
+++ b/assets/stylesheets/oosd.css
@@ -2,6 +2,7 @@ body {
   font-size: 16px;
   font-family: 'Visitor1';
   src: url('../fonts/visitor1.ttf');
+  overflow: hidden;
 }
 
 img {
@@ -28,6 +29,7 @@ h1 {
 .browser-background {
   background-size: cover;
   width: 100%;
+  height: 100%;
 }
 
 #game-area {
@@ -46,7 +48,7 @@ h1 {
 
 canvas {
   position: absolute;
-  margin: 107px 0px 0px 15px;  
+  margin: 107px 0px 0px 15px;
   width: 600px;
   border: 1px solid black;
   z-index: 3;
@@ -74,6 +76,7 @@ canvas {
   width: 300px;
   margin-left: 10px;
   margin-top: 120px;
+  cursor: pointer;
 }
 
 .snooze {
@@ -86,26 +89,27 @@ canvas {
   width: 40%;
   display: flex;
   flex-direction: column;
-  margin: -54px auto;
-  justify-content: center;
-  font-size: 22px;
-  padding-left: 50px;
+  margin: -35px auto;
+  font-size: 40px;
   margin-bottom: 36px;
   position: relative;
   text-align: center;
 }
 
 #icon-container {
-  width: 15%;
+  width: 20%;
+  height: 40px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 0 auto;
   cursor: pointer;
+  margin-top: 100px;
 }
 
 #icon-container img:hover {
   opacity: 0.6;
+  cursor: pointer;
 }
 
 hr {
@@ -116,4 +120,38 @@ hr {
   margin-right: auto;
   border-style: inset;
   border-width: 1px;
+}
+
+.keyboard {
+  position: relative;
+  width: 450px;
+  margin: 10px auto;
+}
+
+.hiddenimg-about, .hiddenimg-controls {
+  display: none;
+}
+
+.hiddentxt-about:hover ~ .hiddenimg-about {
+  display: block;
+  z-index: 101;
+  font-size: 30px;
+}
+/*
+.hiddentxt-about:hover ~ .hiddentxt2 {
+  display: block;
+  z-index: 101;
+  font-size: 30px;
+}
+
+/* .hiddentxt-controls:hover ~ .hiddenimg {
+  display: block;
+  z-index: 101;
+  font-size: 30px;
+} */
+
+.hiddentxt-controls:hover ~ .hiddenimg-controls {
+  display: block;
+  z-index: 101;
+  font-size: 30px;
 }
